# esp32c3-http-server

./: .gitignore  Cargo.toml  NOTICE.md  README.md  build.rs  cfg.toml
.cargo/: config.toml
examples/: Cargo.toml  http_server.rs  http_server_page.html
examples/.cargo/: config.toml
src/: main.rs
